# evalvitals

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
analyzers/: index.html
architecture/: index.html
configs/: qwen_attention.yaml  qwen_attention_full.yaml
docker/: Dockerfile.qwen_attention
docs/: analyzers.md  architecture.md  extending.md  index.md  intervention.md  m2_analysis.md  quickstart.md  roadmap.md
evalvitals/: __init__.py  cli.py  config.py  specs.py
evalvitals/agent_assets/: __init__.py  skills.py
evalvitals/agent_runtime/: __init__.py  _docker_runner.py  cli_types.py  factory.py  json_shape.py  skill_audit.py
evalvitals/analysis/: DESIGN.md  DESIGN_distribution_logging.md  DESIGN_m3_charts.md  __init__.py  adjudicate.py  api.py  base.py  charts.py  chat.py  cli.py  dashboard.py  dashboard_app.py  eval_case_matrix.py  eval_viz_theme.py  explore_run.py  explorer.py  failure_modes.py  fused_pipeline.py  holdout.py  hypothesis_agent.py  operationalize.py  planner.py  probe_search.py  profile.py  report_compiler.py  report_model.py  run_codebase.py  stats_agent.py  stats_tool_agent.py  stats_tool_generator.py  stats_tools.py  upload_app.py  viz_theme.py  workbench.py  workbench_worker.py
evalvitals/analyzers/: __init__.py  base.py
evalvitals/core/: __init__.py  analyzer.py  capability.py  case.py  experiment.py  model.py  pipeline.py  registry.py  result.py  spec.py  tokentype.py  tool.py
evalvitals/datasets/: __init__.py  base.py  gui_os.py  llm_qa.py  pure_qa.py  vlm_qa.py  web_search_qa.py
evalvitals/eval_agent/: __init__.py  _docker_runner.py  _tools.py  ab_runner.py  analysis.py  checkpoint.py  cli_agent.py  cli_runtime.py  cli_skills.py  cli_transcript.py  diagnosis.py  evolution.py  experiment_harness.py  experiment_writer.py  factory.py  git_manager.py  hypothesis.py  hypothesis_tester.py  legacy.py  log_schema.py  loop.py  loop_reports.py  nl_runner.py  orchestrator.py  preregister.py  probe.py  probe_agent.py  protocol.py  report.py  run_context.py  run_log.schema.json  run_logger.py  run_metadata.py  sandbox.py  stats_agent.py  store.py  surgery.py  survey.py  tools.py
evalvitals/models/: __init__.py  _discover.py  agent.py  base.py  compose.py  inference.py  toolcodec.py
evalvitals/reporting/: __init__.py  compiler.py  model.py  stages.py
evalvitals/stats/: __init__.py  api.py  bootstrap.py  e_value.py  ebh.py  evalue.py  friedman.py  hypothesis.py  mcnemar.py  multiplicity.py  subset_sampling.py
evalvitals/viz/: __init__.py  labels.py  prompts.py  renderer.py  schema.py  style.py
examples/: README.md  qwen_attention.py  smoke_qwen3_4b.py
examples/deco_chair/: DESIGN.md  Dockerfile  TODO.md  config.yaml  deco_probe.py  docker-compose.yml  mine_cases.py  run.py
examples/deco_hallu/: DESIGN.md  build_cases.py  config.yaml  run.py  run_m1.py  run_m2-5.py
examples/deco_miss/: DESIGN.md  build_cases.py  config.yaml  run.py
examples/deco_pope/: DESIGN.md  Dockerfile  TODO.md  config.yaml  deco_probe.py  docker-compose.yml  mine_cases.py  run.py
examples/eval_agent/: Dockerfile  config.yaml  docker-compose.yml  run.py
examples/hallucination/: Dockerfile  config.yaml  docker-compose.yml  run.py
examples/logprob_entropy/: Dockerfile  config.yaml  docker-compose.yml  run.py
examples/mllms_hallucination/: Dockerfile  docker-compose.yml  run.py  setup_data.py
examples/mllms_small_object/: Dockerfile  docker-compose.yml  run.py
examples/mm_shap/: Dockerfile  config.yaml  docker-compose.yml  run.py
examples/qwen_attention/: Dockerfile  docker-compose.yml  run.py
examples/qwen_loop/: Dockerfile  docker-compose.yml  run.py
examples/qwen_loop_agy/: Dockerfile  docker-compose.yml  run.py
examples/qwen_loop_claude/: Dockerfile  docker-compose.yml  run.py
examples/qwen_video_temporal/: Dockerfile  docker-compose.yml  run.py
examples/stats_compare/: Dockerfile  config.yaml  docker-compose.yml
examples/vlm_research_topics/: Dockerfile  docker-compose.yml  run.py
extending/: index.html
intervention/: index.html
m2_analysis/: index.html
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
tests/: conftest.py
tests/integration/: conftest.py  test_attention_real.py  test_qwen_forward.py
tests/test_analysis/: test_adjudicate.py  test_api_explore.py  test_attention.py  test_audit_fixes.py  test_bridge_inloop.py  test_bundled_skills.py  test_charts.py  test_cli.py  test_dashboard.py  test_dashboard_app.py  test_explore_run.py  test_explorer.py  test_explorer_battery.py  test_explorer_general_eda.py  test_failure_modes.py  test_fused_pipeline.py  test_general_m2.py  test_holdout.py  test_hypothesis_agent.py  test_integration_fused.py  test_operationalize.py  test_probe_search.py  test_report_compiler.py  test_report_ui_contract.py  test_run_codebase.py  test_uncertainty.py  test_upload_app.py  test_viz_theme.py  test_workbench.py
tests/test_analyzers/: test_analyzer_contract.py  test_analyzers.py  test_blackbox_analyzers.py  test_prompt_contrast.py  test_relative_attention_batch.py  test_shap.py
tests/test_core/: test_capability_matching.py  test_case.py  test_experiment_dedupe.py  test_load_and_config.py  test_pipeline_and_run.py  test_registry_and_shim.py  test_spec.py  test_tokentype.py  test_trajectory.py
tests/test_datasets/: test_datasets.py
tests/test_eval_agent/: test_agent_architecture.py  test_agent_launch_smoke.py  test_agentic_actions.py  test_agentic_launch_smoke.py  test_agentic_search_probes_tool.py  test_agentic_tools.py  test_agy_log_scan.py  test_attention_decoding.py  test_auto_diagnose.py  test_claude_model.py  test_cli_agent_skills.py  test_codegen_runner.py  test_confirm_split.py  test_diagnosis_handoff.py  test_eval_agent.py  test_explore_context.py  test_fix_agent.py  test_fix_multiplicity.py  (+20 more)
(+390 files in other folders)
