[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalvitals"
version = "0.1.0"
description = "Failure case analysis in the era of LLM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "vlm", "interpretability", "failure-analysis", "explainability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Light core: pure-API failure analysis installs WITHOUT torch.
# White-box / local inference lives in the [local] extra; see below.
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Local white-box models + internals capture (the heavy path).
local = [
    "torch>=2.0.0",
    "transformers>=4.51.0",
    "accelerate>=0.26.0",
]
# API / black-box models. The OpenAI-compatible client is optional; you can also
# inject an existing call_vision_api via RuntimeConfig(generate_fn=...).
api = [
    "openai>=1.0",
]
# Interpretability toolchains for the white-box analyzers (Stage 2+).
interp = [
    "captum>=0.7",
    "inseq>=0.6",
    "nnsight>=0.3",
]
# Benchmark dataset loaders that pull from the HuggingFace Hub (e.g. Spatial457).
data = [
    "datasets>=2.0",
    "pillow>=9.0",
]
viz = ["matplotlib>=3.7"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/tealab/evalvitals"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalvitals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "gpu: requires CUDA GPU and cached model weights — skip with -m 'not gpu'",
    "slow: takes more than a few seconds on CPU",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
