[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalvitals"
dynamic = ["version"]
description = "Failure case analysis in the era of LLM."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "vlm", "interpretability", "failure-analysis", "explainability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Light core: pure-API failure analysis installs WITHOUT torch.
# White-box / local inference lives in the [local] extra; see below.
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Local white-box models + internals capture (the heavy path).
local = [
    "torch>=2.0.0",
    "transformers>=4.51.0,<5.0.0",
    "accelerate>=0.26.0",
]
# API / black-box models. The OpenAI-compatible client is optional; you can also
# inject an existing call_vision_api via RuntimeConfig(generate_fn=...).
api = [
    "openai>=1.0",
]
# Interpretability toolchains for the white-box analyzers (Stage 2+).
interp = [
    "captum>=0.7",
    "inseq>=0.6",
    "nnsight>=0.3",
]
# Benchmark dataset loaders that pull from the HuggingFace Hub (e.g. Spatial457).
data = [
    "datasets>=2.0",
    "pillow>=9.0",
]
viz = ["matplotlib>=3.7"]
gemini = ["google-genai>=1.0"]
all = [
    "torch>=2.0.0",
    "transformers>=4.51.0,<5.0.0",
    "accelerate>=0.26.0",
    "openai>=1.0",
    "captum>=0.7",
    "inseq>=0.6",
    "nnsight>=0.3",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    # Validate run_log.jsonl against the published schema (log_schema.py).
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/evalvitals/evalvitals"
Documentation = "https://evalvitals.github.io/evalvitals/"
Repository = "https://github.com/evalvitals/evalvitals"
Issues = "https://github.com/evalvitals/evalvitals/issues"
Changelog = "https://github.com/evalvitals/evalvitals/blob/main/CHANGELOG.md"

[project.scripts]
evalvitals = "evalvitals.cli:main"
evalvitals-m2-chat = "evalvitals.analysis.cli:chat_main"
evalvitals-m2-explore = "evalvitals.analysis.cli:main"

[tool.setuptools.dynamic]
version = {attr = "evalvitals.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["evalvitals*"]

[tool.setuptools.package-data]
# Ship the published run_log.jsonl JSON Schema so non-Python consumers can
# validate the log without installing evalvitals.
"evalvitals.eval_agent" = ["run_log.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "gpu: requires CUDA GPU and cached model weights — skip with -m 'not gpu'",
    "slow: takes more than a few seconds on CPU",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
